--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class='container'>
       <div class='card-white' id='intro'>
         <h1>Hi, I&#8217;m Clea!</h1>
-        <img src='images/clea-profile.jpeg' alt='Clea&#8217;s profile picture'>
+        <img src='clea-profile.jpeg' alt='Clea&#8217;s profile picture'>
         <p>I'm passionate about digital products. Currently, in the process of learning to dance and finding my flow. Let's learn together!</p>
         <p><a href='https://cleacheng.com/' target='_blank' class='btn-cta'>Find your flow
           <!-- <i class="fas fa-arrow-right"></i> --></a></p>
